Fix application tabs misalignment in monochrome theme

--- a/pixelegg/css/monochrome.css
+++ b/pixelegg/css/monochrome.css
@@ -4274,6 +4274,7 @@ td.message span.message {
   border-left: 1px solid #bfc0bf;
   border-right: 1px solid #bfc0bf;
   border-bottom: 4px solid white !important;
+  border-top: 4px solid transparent;
   background-color: #ffffff;
   background-image: none !important;
 }
