--- a/pixelegg/less/layout_raster_main.less
+++ b/pixelegg/less/layout_raster_main.less
@@ -126,6 +126,7 @@
 				border-left: 1px solid #bfc0bf;
 				border-right: 1px solid #bfc0bf;
 				border-bottom: 4px solid white !important;
+				border-top: 4px solid transparent;
 				.background_color_0_gray ;
 				background-image:none !important;
 				&:hover {
